# Valtix

./: DEPLOYMENT.md  ISSUES.md  PR_DETAILS.md  README.md  SOLUTION_LOG.md  updated.md
wallet-backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
wallet-backend/migrations/: 001_initial.sql  002_multi_user.sql  003_add_indexes.sql
wallet-backend/src/: main.rs
wallet-backend/src/api/: mod.rs  routes.rs
wallet-backend/src/api/handlers/: accounts.rs  auth.rs  balance.rs  contacts.rs  mod.rs  multisig.rs  nft.rs  swap.rs  transaction.rs  user_auth.rs
wallet-backend/src/api/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs
wallet-backend/src/chains/: mod.rs
wallet-backend/src/chains/ethereum/: balance.rs  mod.rs  multisig.rs  nft.rs  transaction.rs  wallet.rs
wallet-backend/src/chains/solana/: balance.rs  mod.rs  multisig.rs  nft.rs  swap.rs  transaction.rs  wallet.rs
wallet-backend/src/core/: derivation.rs  encryption.rs  mod.rs  seed.rs  types.rs
wallet-backend/src/services/: mod.rs  multisig_service.rs  nft_service.rs  transaction_service.rs  user_service.rs  wallet_service.rs
wallet-backend/src/storage/: database.rs  mod.rs
wallet-backend/src/storage/models/: account.rs  contact.rs  mod.rs  multisig.rs  nft.rs  transaction.rs  user.rs  wallet.rs
wallet-backend/wallet-extension/: manifest.json  package.json  vite.config.ts
wallet-backend/wallet-extension/src/background/: keyring.ts  service-worker.ts
wallet-backend/wallet-extension/src/content/: content-script.ts  injected.ts
wallet-backend/wallet-extension/src/popup/: index.html  index.tsx
wallet-backend/wallet-extension/src/shared/: types.ts
wallet-backend/wallet-frontend/src/app/: globals.css  page.tsx
wallet-backend/wallet-frontend/src/app/accounts/: page.tsx
wallet-backend/wallet-frontend/src/app/contacts/: page.tsx
wallet-backend/wallet-frontend/src/hooks/: useWallet.ts
wallet-backend/wallet-frontend/src/lib/: utils.ts
wallet-frontend/: .dockerignore  .gitignore  (+2 more)
(+118 files in other folders)
