[package]
name = "wallet-backend"
version = "0.1.0"
edition = "2021"
authors = ["Multi-Chain Wallet Team"]
description = "Production-grade multi-chain cryptocurrency wallet backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid"] }

# Cryptography
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# HD Wallet / BIP39
bip39 = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["sha2"] }
tiny-keccak = { version = "2", features = ["keccak"] }

# Solana
solana-sdk = "2"
solana-client = "2"
solana-account-decoder = "2"
spl-token = "6"
spl-associated-token-account = "4"

# Ethereum
ethers = "2.0"

mpl-token-metadata = "5"

# Random number generation
getrandom = "0.2"

# Bincode for serialization
bincode = "1"

# QR Codes
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

# HTTP Client (for Jupiter API)
reqwest = { version = "0.12", features = ["json"] }

# JWT Authentication
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
bs58 = "0.5"
dotenvy = "0.15"
once_cell = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
